# oneway

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  NEW_DESIGN.md  README.md  justfile
cargo-oneway/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: building-and-running.md  hello-world.md  installation.md
docs/src/reference/: coming-from-rust.md  operators.md  sort-order.md
docs/src/tour/: capabilities.md  errors.md  extern.md  functions.md  literals.md  loops.md  match.md  modules.md  philosophy.md  traits.md  types.md
docs/theme/: custom.css  oneway-highlight.js
editors/: README.md
editors/zed-oneway/: Cargo.toml  extension.toml
editors/zed-oneway/languages/oneway/: config.toml  (+2 more)
editors/zed-oneway/src/: lib.rs
examples/: arithmetic.ow  errors.ow  fetch_url.ow  fibonacci.ow  fluent.ow  hello.ow  list.ow  literals.ow  methods.ow  now.ow  option.ow  read_file.ow
oneway-lints/: Cargo.toml  README.md
oneway-lints/docs/: no_if_else.md  no_loop.md  no_nested_functions.md  no_turbofish.md  one_constructor_name.md  one_public_type_per_file.md  raw_primitive_field.md  raw_primitive_param.md  type_derived_naming.md
oneway-lints/src/: control_flow.rs  functions.rs  lib.rs  safety.rs  sorting.rs  style.rs
oneway-lints/ui/: no_if_else.stderr
src/: ast.rs  error.rs  lib.rs  loader.rs  main.rs
src/checker/: mod.rs
src/codegen/: mod.rs  rust.rs
src/lexer/: scanner.rs  token.rs
src/parser/: ast.rs  parser.rs
std/: clock.ow  datetime.ow  filesystem.ow  http_client.ow  http_client.rs  url.ow  url.rs
