[package]
name = "oneway"
version = "0.1.0"
edition = "2021"
description = "The Oneway programming language compiler"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[bin]]
name = "oneway"
path = "src/main.rs"

[[bin]]
name = "oneway-lsp"
path = "src/bin/oneway-lsp.rs"
