[package]
name = "oneway-lints"
version = "0.1.0"
edition = "2021"
description = "Oneway-inspired lint rules for Rust"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "3.3"

[dev-dependencies]
dylint_testing = "3.3"

[package.metadata.rust-analyzer]
rustc_private = true
